The links in the navbar were fixed

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         
     <nav>
 
-        <a href="http://127.0.0.1:5500/index.html" target="_self"> <img alt="brand-logo" class="logo" src="Group 1.png"></a>
+        <a href="index.html" target="_self"> <img alt="brand-logo" class="logo" src="Group 1.png"></a>
 
         <ul class="nav-links">
-            <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#collection">COLLECTION</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#contact">CONTACT</a></li>
@@ -30,11 +30,11 @@
             <li>
                 <div class="icons">
                     <div class="cart-icons">
-                        <a title="cart" href="http://127.0.0.1:5500/cart-page.html" target="_self"> <img alt="cart" src="bi_cart-fill.png"></a>
+                        <a title="cart" href="cart-page.html" target="_self"> <img alt="cart" src="bi_cart-fill.png"></a>
                         <span id="cart-count">0</span>
 
 
-                     <a title="Favorite" href="http://127.0.0.1:5500/favorites.html" target="_self"> <img class="hearts" alt="heart" src="🦆 icon _heart_.png"></a>
+                     <a title="Favorite" href="favorites.html" target="_self"> <img class="hearts" alt="heart" src="🦆 icon _heart_.png"></a>
                     
 
                     </div>
