Finished work and ready to upload

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                         <img alt="vector" src="Rectangle 2 (1).png">
                         <h3>Blossom Elegance Heels </h3>
                         <p class="details">Step into a world of sophistication and charm
-                            with our floral designed
-                            blossom elegance heel</p>
+                            with our floral designed</p>
                         <h4 class="inline-paragraph">$299.00</h4>
                         <div class="cart">
                             <img alt="vector" class="img" src="🦆 icon _heart_ (1).png">
@@ -97,8 +96,7 @@
                         <img alt="vector" src="Rectangle 2 (3).png">
                         <h3>Serenitry Power Beige Suit</h3>
                         <p class="details">Step into a world of sophistication and charm
-                            with our floral designed
-                            blossom elegance heel</p>
+                            with our floral designed</p>
                         <h4 class="inline-paragraph">$299.00</h4>
                         <div class="cart">
                             <img alt="vector" class="img" src="🦆 icon _heart_ (1).png">
